--- a/src/components/Home/TopBanner/TopBanner.css
+++ b/src/components/Home/TopBanner/TopBanner.css
@@ -1,5 +1,5 @@
 @media only screen and (max-width: 700px) {
-  .banner-description{
+  .description{
       padding-left: 10%;
       padding-top: 5%;
   }
